# refining

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  changelogging.toml
.github/workflows/: release.yml  test.yml
changes/: ~clone-copy-default.feature.md
crates/refining-char/: Cargo.toml  README.md
crates/refining-char/src/: ascii.rs  internals.rs  lib.rs  predicates.rs  prelude.rs  unicode.rs
crates/refining-core/: Cargo.toml  README.md
crates/refining-core/src/: context.rs  errors.rs  lib.rs  logical.rs  predicate.rs  prelude.rs  refinement.rs  serde.rs  types.rs
crates/refining-empty/: Cargo.toml  README.md
crates/refining-empty/src/: empty.rs  lib.rs  prelude.rs
crates/refining-int/: Cargo.toml  README.md
crates/refining-int/src/: bytes.rs  internals.rs  lib.rs  predicates.rs  prelude.rs
crates/refining-length/: Cargo.toml  README.md
crates/refining-length/src/: length.rs  lib.rs  predicates.rs  prelude.rs
crates/refining-regex/: Cargo.toml  README.md
crates/refining-regex/src/: lib.rs  matches.rs  prelude.rs  types.rs
crates/refining-str/: Cargo.toml  README.md
crates/refining-str/src/: bytes.rs  chars.rs  lib.rs  predicates.rs  prelude.rs
examples/: device.rs
src/: core.rs  lib.rs  prelude.rs
