[package]
name = "refining-length"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Refining based on length."
documentation = "https://docs.rs/refining-length"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["refinement", "type", "length"]

[dependencies.refining-core]
workspace = true

[features]
default = ["std"]
std = []
alloc = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
